syntax = "proto3";

package ping_service_proto;
option go_package = "gRPCtest/ping_service_proto;ping_service_proto";

message PingRequest {
}

message PingResponse {
  string message = 1;
}

service PingService {
  rpc Ping (PingRequest) returns (PingResponse);
}
